--- a/Chemistry_Product_Analysis.Rmd
+++ b/Chemistry_Product_Analysis.Rmd
@@ -18,7 +18,7 @@ colnames(chem)
 view(chem)
 ```
 
-For my Capstone Project I reached out to my previous employer "Chemistry" and received all the Quality Control(QC) analytical tests as well as the Certificate of Analysis (COA) test results for every product manufactured during the time the company has been active. Chemistry is a cannabis extraction company and during my time there I was the lab manager and the person in charge of the QC at every step of production, from intake to final product. These test results show the cannabinoid concentrations for Flower, Tinctures, Various Edibles, Vapor Cartridges(Live Resin and FSO(Full Spectrum Oil)), Cannabis Powder (for pressing pills), and Distillate (Isolated d9THC). As a part of this report I've been in direct contact with the CEO and Marketing director to answer some interesting Marketing questions and see if there has been something hiding in this data that that could be used. Chemistry based their niche in the market on something called Full-Spectrum; the claim is that its oil is the best representation of the "flower" in a concentrated form. This is because we do a relatively simply refinement process that allows for the retention of various cannabinoids (active chemicals found in Cannabis and Hemp eg. THC, CBD, THCA, CBDA, CBG, THCV,CBN just to name a few) There are about 24 cannabinoids that analytical labs test for although there are people still discovering new compounds as well as synthesizing them in a lab setting. Cannabis/Hemp also contain Essecial oils that we refer to as Terpenes. Terpenes influence the medicinal effect and give the flower its aroma and when smoked its flavor. Cannabinoids and terpenes are going to be the main focus of this analysis. I've been given the task to compare the ratios of these two groups of compounds from their flower form to their concentrated form in order to prove exactly how "full spectrum" their products are. I'll try my best to explain the analysis process as it pertains to this somewhat esoteric data. 
+As the previous lab director for "Chemistry" I have access to all the Quality Control(QC) analytical tests as well as the Certificate of Analysis (COA) test results for every product manufactured during the time the company has been active. Chemistry is a cannabis extraction company and during my time there I was in charge of the QC at every step of production, from intake to final product as well as weekly analysis of products, marketing event ROI's and overall processes efficiency. These test results show the cannabinoid concentrations for Flower, Tinctures, Various Edibles, Vapor Cartridges(Live Resin and FSO(Full Spectrum Oil)), Cannabis Powder (for pressing pills), and Distillate (Isolated d9THC). Working directly with the CEO and Marketing director to answer some interesting questions and see if there has been something hiding in this data that that could be used. Chemistry based their niche in the market on something called Full-Spectrum; the claim is that the oil is the best representation of the "flower" in a concentrated form. This is because of the solvents we use and the fact that we do a relatively simply refinement process that allows for the retention of various cannabinoids (active chemicals found in Cannabis and Hemp eg. THC, CBD, THCA, CBDA, CBG, THCV,CBN just to name a few) There are about 24 cannabinoids that analytical labs test for although there are people still discovering new compounds as well as synthesizing them in a lab setting. Cannabis/Hemp also contain Essecial oils that we refer to as Terpenes. Terpenes influence the medicinal effect and give the flower its aroma and when smoked its flavor. Cannabinoids and terpenes are going to be the main focus of this example analysis. The task at hand was to compare the ratios of these two groups of compounds from their flower form to their concentrated form in order to prove exactly how "full spectrum" their products are. I'll try my best to explain the analysis process as it pertains to this somewhat esoteric data. 
 
 These reports give a very detailed and somewhat excessive amount of information back. My first step will be cleaning up the data to keep only relevant information. 
 ```{r}
@@ -171,6 +171,10 @@ colnames(transposed_IndCannPropGelonade_melt)[colnames(transposed_IndCannPropGel
 ggplot(data = transposed_IndCannPropGelonade_melt, aes(x = Description, y = value, fill = Cannabinoids)) +
   geom_col(position = "stack")
 ```
+
+![gel_cann](https://user-images.githubusercontent.com/108306164/218926827-ef544c12-1d62-49bd-80dc-e6951cb5ebaf.jpg)
+
+
 ```{r}
 #Cannaninoid comparison between Flower and FSO for the Lady Benbow Strain. 
   LadyBenbow <- 
